--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-VITE_API_BASE_URL=http://43.203.93.162:8080
+VITE_API_BASE_URL=https://api.maglo.kr
 
 
 #localhost
 #43.203.93.162
+#https://api.maglo.kr
+
