--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@quasar/extras": "^1.16.4",
     "@stomp/stompjs": "^7.1.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.9",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "pinia": "^3.0.1",
+    "qs": "^6.14.0",
     "quasar": "^2.16.0",
     "sockjs-client": "^1.6.1",
     "vue": "^3.4.18",
