--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postinstall": "quasar prepare"
   },
   "dependencies": {
+    "@pixiv/three-vrm": "^3.4.0",
     "@quasar/extras": "^1.16.4",
     "@stomp/stompjs": "^7.1.1",
     "axios": "^1.7.9",
@@ -25,6 +26,7 @@
     "qs": "^6.14.0",
     "quasar": "^2.16.0",
     "sockjs-client": "^1.6.1",
+    "three": "^0.176.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.0",
     "xlsx": "^0.18.5"
